2003-10-29  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/global.h, src/rbgobj_object.c, src/rbgobj_signal.c: share a
	module which serves to hook 'super'.

	* src/rbgobj_signal.c: change prefix of default handler of signals
	from 'do_' to 'signal_do_'.

	* test/test-glib2.rb: new file.

2003-10-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c (get_prop_func, set_prop_func): replace '-' with
	'_' from method name.

	* src/rbgobj_object.c (get_prop_func, set_prop_func): do not call
	#do_get_property and #do_set_property, but #foo and #foo=.

	* src/rbgobj_signal.c (gobj_s_signal_new): change the arity of
	GLib::Instantiatable#signal_new.

2003-10-24  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c (emit_body, chain_from_overridden_body):
	remove G_SIGNAL_TYPE_STATIC_SCOPE flag from parameters and
	return value.

2003-10-23  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_enum.c (rbgobj_get_enum, rbgobj_get_flags): check if the
	argument GType is subtype of GEnum or GFlags.

	* src/rbgobj_signal.c: new method
	GLib::Instantiatable#signal_has_handler_pending?.

	* src/rbgobj_signal.c (g_signal_handler_block,
	gobj_sig_handler_unblock, gobj_sig_handler_disconnect):
	use NUM2ULONG instead of NUM2INT.

2003-10-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_signal.c: Fix a segfault when GLib::Object#signal_emit 
	is called. 

2003-10-08  Laurent Sansonetti  <laurent@datarescue.be>

	* src/rbgobj_param.c: Removed a compilation warning in function
	value_validate_ensure().

2003-10-05  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib.c: call g_mem_set_vtable() to make glib to use
	ruby_xmalloc(), ruby_xrealloc(), ruby_xfree().

2003-09-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/lib/mkmf-gnome2.rb: append "-I$(sitearchdir)" to $CPPFLAGS not
	$CFLAGS. and stop overriding create_makefile().

2003-09-23  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
